# compute-starter-kit-rust-beacon-termination

./: .gitignore  Cargo.toml  README.md  SECURITY.md  catalog-info.yaml  fastly.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
src/: client_data.rs  core_web_vital.rs  example_core_web_vital.rs  example_csp_violation.rs  example_network_error_log.rs  main.rs  network_error_log.rs  report.rs
