[package]
name = "fastly-compute-project"
version = "0.2.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
chrono = { version = "^0.4.31", default-features = false, features = ["clock"] }
fastly = "0.9.8"
ipnet = "^2.9.0"
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.107"
