[package]
name = "fastly-compute-project"
version = "0.2.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
chrono = { version = "^0.4.38", default-features = false, features = ["clock"] }
fastly = "0.10.0"
ipnet = "^2.9.0"
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "^1.0.116"
