[package]
name = "fastly-compute-project"
version = "0.2.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
chrono = { version = "^0.4.31", default-features = false, features = ["clock"] }
fastly = "0.11.2"
ipnet = "^2.9.0"
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.107"
